<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context="uk.co.marctowler.pokemongotoolkit.MainActivityFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EvoCalc"
        android:text="@string/action_EvoCalc"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:onClick="EvoCalc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_IVCalc"
        android:id="@+id/IVCalc"
        android:layout_below="@+id/EvoCalc"
        android:layout_marginTop="29dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_EggGuide"
        android:id="@+id/EggHatch"
        android:layout_below="@+id/IVCalc"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />
</RelativeLayout>
