<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.marctowler.pokemongotoolkit.EvoActivity"
    tools:showIn="@layout/activity_evolution_calc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_selectPokemon"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokemonList"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:entries="@array/evo_pokemoncandies"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_numPokemon"
        android:id="@+id/textView2"
        android:layout_below="@+id/pokemonList"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_numCandies"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mon_num"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/can_num"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/mon_num"
        android:layout_alignEnd="@+id/mon_num" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:id="@+id/btn_add"
        android:layout_alignTop="@+id/textView2"
        android:onClick="addPokemon"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calc"
        android:id="@+id/btn_calc"
        android:layout_alignParentBottom="true"
        android:onClick="showAlert"
        android:layout_alignStart="@+id/pokemonList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:id="@+id/btn_reset"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btn_add"
        android:layout_marginEnd="44dp" />

</RelativeLayout>
